--- a/ThesisReport/thesis.tex
+++ b/ThesisReport/thesis.tex
@@ -66,7 +66,8 @@ These studies show that the viewer perception of depth
 is inversely proportional to his distance from the object \cite{kru10,swa07,jer05,liv05}. For instance, in \cite{swa07} some experiments are designed to study and evaluate human
 perception of absolute depth for an outdoor augmented reality application in urban settings. 
 However, what we are more interested in is the human perception of relative depth in stereo vision. This metric can be estimated based on the ability to distinguish the depth of two different points
-at a certain distance. The smallest depth difference between two points that can be detected in binocular vision is called stereoscopic acuity \textbf{REFERENCE}. 
+at a certain distance. The smallest depth difference between two points that can be detected in binocular vision is called stereoscopic acuity \textbf{REFERENCE}. More detail about
+this metric will be provided in the next chapters.
 Therefore, we have investigated and applied stereoacuity of human eyes in our evaluation in order to obtain the smallest detectable depth of 
 objects in human binocular vision based on their distance from the observer.
 
@@ -77,7 +78,7 @@ valid reference} \cite{spe}.
 There are different approaches to speed up a system. Acceleration of a system is possible in two ways:
 \begin{enumerate}
 \item Using more advanced technology and hardware
-\item More complicated and efficient software design
+\item More sophisticated and efficient software design
 \end{enumerate}
 However, having access to advanced technology and better hardware is not always feasible and even the most advanced technology have some limitation to their memory space and computional capability
 which may not meet the requirement for some real-time applications. 
@@ -87,19 +88,21 @@ an AR system mentioned earlier, i.e, real-time user interaction. \newline
 One of the most important features that makes our evaluation unique and different from the others is that we have tailored the evaluation process of stereo matching algorithms for an augmneted 
 reality system. Therefore, we have designed our evaluation testbed within this framework, while keeping in mind the most important properties and constrains of an AR system.
 In order to address the speed factor in augmented reality systems we have decided to focus on certain regions of the scene rather than the whole image for generation and evaluation of 
-depth values. 
-This idea which originates from having a more complicated and efficient design for gaining speed up, 
+depth values.  
+This idea which originates from having a more efficient design for gaining speed up, 
 also addresses the computational resources used during the process and may lead to significant system speed up.
-We also believe that distinctive features such as the edges, either RGB or depth, in a scene are more important to human visual system in object detection and their corresponding depth perception. 
+It is also known that distinctive features such as the edges, either RGB or depth, in a scene play an important role for object detection and their corresponding depth perception in human visual
+system \cite{sze11}.
+\textbf {(REFERENCE)}
 Therefore, in an augmneted reality application, wrong depth results, especially in those regions, which will lead to erroneous registeration of virtual and real objects, 
 can be perceived and picked out easier by the human eyes. This may cause poor performance of the system and possibly faulty interaction between 
 the user and the augmented world. 
 Hence, in this research we have focused more on studying and evaluating the results of stereo correspondence algorithms in particular regions. Since the depth of the objects 
-in a scene and their perception by human visual system are more important in the AR appliation of our interest, we have 
-defined these regions to be the depth edges in the scene that have been expanded few pixels from each side. 
-Our hypothesis is that the depth edges, which normally includes object boundaries as well, are important depth cues for the user to perceive the depth of different objects in the scene. 
-However, the reason for which we decided to extend the detected edges within a few pixels on each side is to also address occlusion and depth discontinuity, which happen to be two of
-the most challenging regions for stereo matching algorithms.
+in a scene and their perception by human visual system are more important in the AR application of our interest, we have 
+defined these regions to be depth edges and their surrounding region in the scene.
+Our hypothesis is that the depth edges, which normally include object boundaries as well, are important depth cues for the user to perceive the depth of different objects in the scene. 
+Moreover, inspection of the regions within a few pixels of the depth edges in the scene would also address the problem of occlusion and depth discontinuity, which are two of
+the most challenging regions in stereo matching algorithms \cite{sch02}.
 Finding correct depth values in these 
 regions can lead to more accurate combination of virtual and real objects in the scene and therefore a more reasonable augmented world from the user point of view to interact with. \newline
 \newline
