--- a/ThesisReport/thesis.tex
+++ b/ThesisReport/thesis.tex
@@ -34,7 +34,7 @@ we can refer to \cite{liv05}:
 \end{enumerate}
 
 AR systems overlay 2D or 3D virtual objects on real scenes. Therefore, depending on the application, certain accuracy would be required for 
-registeration of virtual and real objects. There are different approaches to obtain user's location and the position of other objects in the environment.
+registration of virtual and real objects. There are different approaches to obtain user's location and the position of other objects in the environment.
 Tracking sensors such as gyroscope and accelerometer along with video sensors can provide information on the user's position and viewing orientation \cite{azum01}.
 In order to find the position of the objects in the scene, a depth map of the surrounding environment at each time would be required. To obtain the depth of the 
 objects in the scene several depth sensing technologies can be used such as 3D laser scanner, depth cameras or regular cameras. However, in order to have a mobile AR
@@ -94,7 +94,7 @@ also addresses the computational resources used during the process and may lead 
 It is also known that distinctive features such as the edges, either RGB or depth, in a scene play an important role for object detection and their corresponding depth perception in human visual
 system \cite{sze11}.
 \textbf {(REFERENCE)}
-Therefore, in an augmneted reality application, wrong depth results, especially in those regions, which will lead to erroneous registeration of virtual and real objects, 
+Therefore, in an augmented reality application, wrong depth results, especially in those regions, which will lead to erroneous registration of virtual and real objects, 
 can be perceived and picked out easier by the human eyes. This may cause poor performance of the system and possibly faulty interaction between 
 the user and the augmented world. 
 Hence, in this research we have focused more on studying and evaluating the results of stereo correspondence algorithms in particular regions. Since the depth of the objects 
