thesis and reference updated

--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -251,3 +251,21 @@
  organization={International Society for Optics and Photonics}
 }
 
+@article{wann95,
+ title={Natural problems for stereoscopic depth perception in virtual environments},
+ author={Wann, John P and Rushton, Simon and Mon-Williams, Mark},
+ journal={Vision research},
+ volume={35},
+ number={19},
+ pages={2731--2736},
+ year={1995},
+ publisher={Elsevier}
+}
+
+@phdthesis{pfa2000,
+ title={Depth perception in computer graphics},
+ author={Pfautz, Jonathan David},
+ year={2000},
+ school={University of Cambridge}
+}
+
