--- a/ThesisReport/thesis.tex
+++ b/ThesisReport/thesis.tex
@@ -125,7 +125,7 @@ On the other hand, there was no source code available for the second algorithm. 
 The reason we have chosen these two algorithms is that the first method, SGBM, has shown to generate acceptable results within 1-2 seconds on typical test images \cite{hir08} and 
 its implementation in OpenCV library has also made its usage more common and easier in applications. The second algorithm, also known as ADCensus, was chosen since it has been designed in a way that
 can be ported to graphics processing unit for acceleration and according to Middlebury evaluation benchmark it is currently ranked as one of the top algorithms for stereo matching \cite{mideval}.
-It should also be noted that this solution uses better and more complicated approaches to do stereo matching which makes it superior to many other solutions. \newline
+It should also be noted that this solution uses better and more sophisticated approaches to do stereo matching which makes it superior to many other solutions. \newline
 For our evaluation, we have used KITTI stereo training dataset as our stereo inputs \cite{kitti}. 
 These images are more realistic and they have been taken from outdoor scenes under different circumstances 
 and the ground truth disparity map is also provided for each of them which is useful in the evaluation process. KITTI Vision project also provides a benchmark and an evaluation table
